--- a/css/mod.css
+++ b/css/mod.css
@@ -8,6 +8,11 @@ a {color: #E89B41;}
 .jumbotron {background-image: url("../images/jumbotron-image-bg.png");background-position: center;background-repeat: no-repeat;background-size: cover;}
 .jumbotron {height: 30rem;}
 .jumbotron h1 {font-weight: 100;}
+@media (max-width: 62em) {
+.display-3 {
+    font-size: 2.5rem;
+}  
+}
 /* MARKETING CONTENT
 -------------------------------------------------- */
 /* Center align the text within the three columns below the carousel */
