--- a/css/mod.css
+++ b/css/mod.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 * {font-family: 'Roboto', sans-serif;}
-header {border-bottom: 1px solid #BEA678;}
+header {border-bottom: 1px solid #CCCCCC;}
 h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6 {font-family: 'Poppins', sans-serif;}
 a {color: #E89B41;}
 a:hove {opacity: 0.75;}
