--- a/css/cassiopeia-spring.css
+++ b/css/cassiopeia-spring.css
@@ -22,6 +22,6 @@ a.navbar-brand {color: #6C6900;}
     border-color: #426B00;
 }.btn-warning:hover {
     color: #ffffff;
-    background-color: #6BDB0F;
-    border-color: #6BDB0F;
+    background-color: #DBD30F;
+    border-color: #DBD30F;
 }
