--- a/css/cassiopeia-spring.css
+++ b/css/cassiopeia-spring.css
@@ -21,7 +21,7 @@ a.navbar-brand {color: #6C6900;}
     background-color: #426B00;
     border-color: #426B00;
 }.btn-warning:hover {
-    color: #ffffff;
+    color: #426B00;
     background-color: #DBD30F;
     border-color: #DBD30F;
 }
