--- a/css/cassiopeia.css
+++ b/css/cassiopeia.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&family=Roboto:wght@400;700&display=swap');
-* {font-family: 'Roboto', sans-serif;}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&family=Roboto:wght@100;300;400;700&display=swap');
+* {font-family: 'Noto Sans JP', sans-serif;}
 header {border-bottom: 1px solid #CCCCCC;}
-h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6 {font-family: 'Poppins', sans-serif;}
+h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6 {font-family: 'Roboto', sans-serif;}
 
 .jumbotron {height: 30rem;}
 .jumbotron h1 {font-weight: 100;}
@@ -72,7 +72,6 @@ div.jumbotron>div {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
-.text-thin {font-weight: 300;}
 .blog-post {
     margin-bottom: 3rem;
 }
