--- a/css/cassiopeia-summer.css
+++ b/css/cassiopeia-summer.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* CSS Document */
-a {color: #FF5624;}
+a {color: #713B0F;}
 a:hover {color: #F57122;}
 a.navbar-brand {color: #FF5624;}
 .bg-light {background-color: #f0f0f0!important;}
