--- a/css/cassiopeia-summer.css
+++ b/css/cassiopeia-summer.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 a {color: #713B0F;}
 a:hover {color: #F57122;}
-a.navbar-brand {color: #FF5624;}
+a.navbar-brand {color: #713B0F;}
 .bg-light {background-color: #f0f0f0!important;}
 .jumbotron {
     background-image: url(../images/jumbotron-image-bg-summer.png);
