--- a/css/cassiopeia.css
+++ b/css/cassiopeia.css
@@ -1,8 +1,12 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;700&family=Roboto:wght@100;300;400;700&display=swap');
-* {font-family: 'Noto Sans JP', sans-serif;}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@100;300;400;700&display=swap');
+* {font-family: 'Noto Sans', sans-serif;}
 header {border-bottom: 1px solid #CCCCCC;}
 h1,.h1,h2,.h2,h3,.h3,h4,.h4,h5,.h5,h6,.h6 {font-family: 'Roboto', sans-serif;}
+blockquote {
+    background-color: #E5E5E5;
+    padding: 1rem 0.5rem 0.25rem;
+}
 
 .jumbotron {height: 30rem;}
 .jumbotron h1 {font-weight: 100;}
