--- a/css/cassiopeia-summer.css
+++ b/css/cassiopeia-summer.css
@@ -5,7 +5,7 @@ a:hover {color: #F57122;}
 a.navbar-brand {color: #713B0F;}
 .bg-light {background-color: #f0f0f0!important;}
 .jumbotron {
-    background-image: url(../images/jumbotron-image-bg-summer.png);
+    background-image: url(../images/jumbotron-image-bg-summer.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
