--- a/css/cassiopeia-winter.css
+++ b/css/cassiopeia-winter.css
@@ -5,7 +5,7 @@ a:hover {color: #D9D9D9;}
 a.navbar-brand {color: #1d1d1d;}
 .bg-light {background-color: #f0f0f0!important;}
 .jumbotron {
-    background-image: url(../images/jumbotron-image-bg-winter.png);
+    background-image: url(../images/jumbotron-image-bg-winter.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
